--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   fl_chart: ^0.45.0
   percent_indicator: ^4.2.2
   badges: ^3.0.2
+  fluttertoast: ^8.2.4
   font_awesome_flutter: ^10.2.1
   connectivity_plus: ^3.0.3
   http: ^0.13.5
@@ -62,6 +63,7 @@ dependencies:
   url_launcher: ^6.1.5
   provider: ^6.0.3
   android_id: ^0.1.3+1
+  dropdown_button2: ^2.3.9
 
 dependency_overrides:
   flutter_svg: ^1.0.3
