--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   shimmer: ^2.0.0
   image_cropper: ^3.0.0
   flutter_image_compress: ^1.1.2
-  intl: any
+  intl: ^0.18.1
   flutter_rating_bar: ^4.0.1
   firebase_analytics: ^10.1.2
   firebase_messaging: ^14.2.3
