--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   provider: ^6.0.3
   android_id: ^0.1.3+1
   dropdown_button2: ^2.3.9
+  toggle_switch: ^2.1.0
 
 dependency_overrides:
   flutter_svg: ^1.0.3
