--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.gofreshapartner.app</string>
+	<string>com.topbusiness.salony_partner</string>
 	<key>PROJECT_ID</key>
 	<string>gofresha-2b68d</string>
 	<key>STORAGE_BUCKET</key>
