--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,16 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>      
+	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>      
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>MinimumOSVersion</key>
+    <string>13.0</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>GoFresha PartnerApp</string>
+	<string>Salony Partner</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -26,12 +28,7 @@
 	<string>$this app needs access to your calender to pick a date.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>$this app needs access to your camera for click picture and save.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>This app needs access to location when open and in the background and We are using location to get nearby loaction.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>This app needs access to location when in the background and We are using location to get nearby location.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app needs access to location when open and We are using location to get nearby location.</string>
+
 	<key>NSMicrophoneUsageDescription</key>
 	<string>$this app needs access to your microphone for video.</string>
 	<key>NSMotionUsageDescription</key>
@@ -40,6 +37,8 @@
 	<string>Open gallery for image selection</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>$this app needs access to your speech recognition in video</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
@@ -64,7 +63,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 </dict>
 </plist>
