--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+2
+version: 1.0.0+3
 
 environment:
   sdk: ">=3.1.2 <4.0.0"
@@ -65,6 +65,7 @@ dependencies:
   android_id: ^0.1.3+1
   dropdown_button2: ^2.3.9
   toggle_switch: ^2.1.0
+  flutter_launcher_icons: ^0.13.1
 
 dependency_overrides:
   flutter_svg: ^1.0.3
@@ -73,13 +74,15 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.9.3
   change_app_package_name: ^1.1.0
 flutter_icons:
-  android: "ic_launcher"
   ios: true
+  android: true
   remove_alpha_ios: true
-  image_path: "assets/appicon_120x120.png"    
+  background_color: "#FFFFFF"
+  image_path: "assets/logo.png"
+  adaptive_icon_foreground: "assets/logo.png"
+  adaptive_icon_background: "#FFFFFF"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
