--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,8 +80,8 @@ flutter_icons:
   android: true
   remove_alpha_ios: true
   background_color: "#FFFFFF"
-  image_path: "assets/logo.png"
-  adaptive_icon_foreground: "assets/logo.png"
+  image_path: "assets/1024.png"
+  adaptive_icon_foreground: "assets/1024.png"
   adaptive_icon_background: "#FFFFFF"
 
 # For information on the generic Dart part of this file, see the
