--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+3
+version: 1.0.0+5
 
 environment:
   sdk: ">=3.1.2 <4.0.0"
@@ -58,6 +58,7 @@ dependencies:
   firebase_messaging: ^14.2.3
   flutter_local_notifications: ^13.0.0
   firebase_core: ^2.6.0
+  firebase_auth: ^4.10.1
   pinput: ^1.2.0
   flutter_html: ^3.0.0-beta.2
   url_launcher: ^6.1.5
@@ -66,6 +67,7 @@ dependencies:
   dropdown_button2: ^2.3.9
   toggle_switch: ^2.1.0
   flutter_launcher_icons: ^0.13.1
+  flutter_advanced_drawer: ^1.3.6
 
 dependency_overrides:
   flutter_svg: ^1.0.3
