--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,5 +76,6 @@ dependencies
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.android.support:multidex:1.0.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.android.recaptcha:recaptcha:18.4.0'
 }
 
