--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+5
+version: 1.0.0+6
 
 environment:
   sdk: ">=3.1.2 <4.0.0"
@@ -68,6 +68,9 @@ dependencies:
   toggle_switch: ^2.1.0
   flutter_launcher_icons: ^0.13.1
   flutter_advanced_drawer: ^1.3.6
+  mobile_number: ^2.1.1
+  sms_autofill: ^2.3.0
+  otp_autofill: ^3.0.0
 
 dependency_overrides:
   flutter_svg: ^1.0.3
